fix(.btn): align the .btn(in .left) to the left
With the property of align-self!

--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ img {
   font-weight: 1000;
 }
 
+.left .btn {
+  align-self: flex-start;
+}
+
 .info {
   display: flex;
   flex-direction: column;
